fix overflow issues in who page

--- a/css/pages/who.scss
+++ b/css/pages/who.scss
@@ -11,10 +11,12 @@
 
 @keyframes moveInFromLeft {
     from {
+        opacity: 1;
         filter: blur(3px) drop-shadow(4px 4px 12px rgba(0, 0, 0, 0.5));
         transform: translateX(-300%);
     }
     to {
+        opacity: 1;
         filter: blur(0px) drop-shadow(4px 4px 12px rgba(0, 0, 0, 0.5));
         transform: translateX(0%);
     }
@@ -22,10 +24,12 @@
 
 @keyframes moveInFromRight {
     from {
+        opacity: 1;
         filter: blur(3px) drop-shadow(4px 4px 12px rgba(0, 0, 0, 0.5));
         transform: translateX(300%);
     }
     to {
+        opacity: 1;
         filter: blur(0px) drop-shadow(4px 4px 12px rgba(0, 0, 0, 0.5));
         transform: translateX(0%);
     }
@@ -91,16 +95,15 @@ main {
             flex-flow: column nowrap;
             justify-content: center;
             align-items: center;
+            width: 100%;
+            max-width: 100vw;
+            overflow: hidden;
             .photo-frame {
                 z-index: 100;
                 position: relative;
-                rotate: -5deg;
+                top: auto;
+                opacity: 0;
                 filter: blur(3px) drop-shadow(4px 4px 12px rgba(0, 0, 0, 0.5));
-                transform: translateX(-300%);
-                &.animation {
-                    animation: moveInFromLeft 0.6s
-                        cubic-bezier(0.22, 0.18, 0.25, 1) forwards;
-                }
             }
             > img {
                 position: absolute;
@@ -122,8 +125,7 @@ main {
     .blue aside {
         .photo-frame {
             rotate: 5deg;
-            filter: blur(3px) drop-shadow(4px 4px 12px rgba(0, 0, 0, 0.5));
-            transform: translateX(300%);
+            transform: translateX(120%);
             &.animation {
                 animation: moveInFromRight 0.6s
                     cubic-bezier(0.22, 0.18, 0.25, 1) forwards;
@@ -131,6 +133,16 @@ main {
         }
         > img {
             transform: translate(-50%, -50%) scale(0.85);
+        }
+    }
+    .evidence aside {
+        .photo-frame {
+            rotate: -5deg;
+            transform: translateX(-120%);
+            &.animation {
+                animation: moveInFromLeft 0.6s cubic-bezier(0.22, 0.18, 0.25, 1)
+                    forwards;
+            }
         }
     }
 
@@ -190,6 +202,7 @@ main {
             }
             aside {
                 width: 50%;
+                overflow: visible;
             }
         }
         .blue {
